--- a/src/main/resources/web-app/index.html
+++ b/src/main/resources/web-app/index.html
@@ -13,7 +13,7 @@
             crossorigin="anonymous"></script>
     <!--angular-->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
-
+    <script src="https://cdn.rawgit.com/gdi2290/angular-websocket/v1.0.9/angular-websocket.min.js"></script>
 
     <link href="/resources/dest.css" rel="stylesheet">
     <script src="/resources/dest.js"></script>
@@ -38,16 +38,15 @@
             <span class="input-group-addon">.00</span>
         </div>
         <p>
-
-        <div class="checkbox">
-            <label>
-                <input type="checkbox"> Remember me
-            </label>
-        </div>
         <div class="col-sm-10">
             <button class="btn btn-default" ng-click="dest.updateConfig()">Update prices</button>
         </div>
+        <div class="form-group has-success">
+            <label class="control-label" for="summary">Calculated utility cost</label>
+            <input type="text" class="form-control" id="summary">
+        </div>
     </div>
+
     <!--<label>Name:</label>-->
     <!--<input type="text" ng-model="yourName" placeholder="Enter a name here">-->
     <!--<hr>-->
