--- a/src/main/resources/web-app/index.html
+++ b/src/main/resources/web-app/index.html
@@ -43,14 +43,9 @@
         </div>
         <div class="form-group has-success">
             <label class="control-label" for="summary">Calculated utility cost</label>
-            <input type="text" class="form-control" id="summary">
+            <input type="text" class="form-control" id="summary" ng-model="socket.cost">
         </div>
     </div>
-
-    <!--<label>Name:</label>-->
-    <!--<input type="text" ng-model="yourName" placeholder="Enter a name here">-->
-    <!--<hr>-->
-    <!--<h1>Hello {{yourName}}!</h1>-->
 </div>
 </body>
 </html>
