--- a/src/main/resources/web-app/index.html
+++ b/src/main/resources/web-app/index.html
@@ -2,7 +2,7 @@
 <html ng-app="destApp">
 <head>
     <!--JQuery-->
-    <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <!--bootstrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
           integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -19,31 +19,34 @@
     <script src="/resources/dest.js"></script>
 </head>
 <body>
-<div class="container" ng-controller="DestController as dest">
-    <div class="panel panel-default col-md-8 dest-form">
-        <p>
+<div class="container vertical-center" ng-controller="DestController as dest">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <div class="panel panel-default dest-form">
+                <div class="input-group">
+                    <span class="input-group-addon">$</span>
+                    <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)"
+                           placeholder="Heating cost" ng-model="heatingPrice">
+                    <span class="input-group-addon">.00</span>
+                </div>
+                <p>
 
-        <div class="input-group">
-            <span class="input-group-addon">$</span>
-            <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)"
-                   placeholder="Heating cost" ng-model="heatingPrice">
-            <span class="input-group-addon">.00</span>
-        </div>
-        <p>
-
-        <div class="input-group">
-            <span class="input-group-addon">$</span>
-            <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)"
-                   placeholder="Cooling cost" ng-model="coolingPrice">
-            <span class="input-group-addon">.00</span>
-        </div>
-        <p>
-        <div class="col-sm-10">
-            <button class="btn btn-default" ng-click="dest.updateConfig()">Update prices</button>
-        </div>
-        <div class="form-group has-success">
-            <label class="control-label" for="summary">Calculated utility cost</label>
-            <input type="text" class="form-control" id="summary" ng-model="socket.cost">
+                <div class="input-group">
+                    <span class="input-group-addon">$</span>
+                    <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)"
+                           placeholder="Cooling cost" ng-model="coolingPrice">
+                    <span class="input-group-addon">.00</span>
+                </div>
+                <p>
+                <div>
+                    <button class="btn btn-default" ng-click="dest.updateConfig()">Update prices</button>
+                </div>
+                <p>
+                <div class="form-group has-success">
+                    <label class="control-label" for="summary">Calculated utility cost</label>
+                    <input type="text" class="form-control" id="summary" ng-model="socket.cost">
+                </div>
+            </div>
         </div>
     </div>
 </div>
